--- a/src/components/landing-cards/quizCard.css
+++ b/src/components/landing-cards/quizCard.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     border: 1px solid rgb(215, 215, 215);
     cursor: pointer;
+    text-decoration: none;
     transition: all 0.2s ease-in-out;
 }
 .enabler__quiz-card:hover {
