--- a/src/pages/questions-page/question.css
+++ b/src/pages/questions-page/question.css
@@ -10,11 +10,19 @@
 }
 .enabler__question-header {
     width: 100%;
-    height: max-content;
+    height: 48px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #d48d69;
+}
+.enabler__question-main {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    grid-template-rows: 1fr;
+    gap: 32px;
 }
 .enabler__username {
     display: flex;
@@ -22,18 +30,24 @@
     height: 100%;
     align-items: center;
 }
+.enabler__question-game {
+    border: 0.1px solid rgb(194, 194, 194);
+    padding: 16px 0;
+}
 .enabler__question-top {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin: 16px 0 0;
     align-items: center;
     color: violet;
 }
 .enabler__question-top h3 {
     color: #3c3c3c;
+    font-size: 2rem;
+    margin: 0 0 16px;
+    text-transform: uppercase;
 }
 .enabler__question-top h4 {
     font-size: 1.3rem;
@@ -41,9 +55,15 @@
     letter-spacing: 2px;;
 }
 .enabler__answer-option {
+    width: max-content;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 150px);
-    gap: 32px;
-    margin: 16px 0 0;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 150px);
+    gap: 16px;
+    margin: 8px auto 0;
+    padding: 8px;
+}
+.enabler__qn-score {
+    padding: 8px 0;
+    text-align: center;
 }
