--- a/src/pages/questions-page/question.css
+++ b/src/pages/questions-page/question.css
@@ -45,9 +45,11 @@
 }
 .enabler__question-top h3 {
     color: #3c3c3c;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0 0 16px;
+    font-weight: 800;
     text-transform: uppercase;
+    color: blueviolet;
 }
 .enabler__question-top h4 {
     font-size: 1.3rem;
