--- a/src/components/login-signup/login-signup.css
+++ b/src/components/login-signup/login-signup.css
@@ -30,12 +30,19 @@
 }
 .input-form button {
     padding: 8px 16px;
-    font-size: 1.2rem;
-    border: 1px solid rgb(156, 156, 156);
+    font-size: 1.1rem;
+    font-weight: 300;
+    border: 0.1px solid blueviolet;
+    border-radius: 24px;
     cursor: pointer;
+    color: blueviolet;
+    transition: all 0.2s ease-in-out;
+}
+.input-form button:hover {
+    scale: 1.02;
 }
 .enabler__more a {
     text-decoration: none;
-    color: #0374AB;
+    color: violet;
     font-weight: 600;
 }
