--- a/src/pages/questions-page/question.css
+++ b/src/pages/questions-page/question.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 32px;
+    position: relative;
 }
 .enabler__question-header {
     width: 100%;
