--- a/src/pages/questions-page/question.css
+++ b/src/pages/questions-page/question.css
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .enabler__score-popup img {
     position: absolute;
@@ -57,9 +57,10 @@
     cursor: pointer;
 }
 .enabler__score-popup-inner {
+    border-radius: 12px;
     width: 300px;
     height: 300px;
-    background-color: aliceblue;
+    background-color: rgba(240, 248, 255);
     padding: 32px;
     display: flex;
     justify-content: center;
